2009-05-08 Jens Thoms Toerring    <jt@toerring.de>

	* lib/forms.c, lib/objects.c, lib/flinternals.h:
	Using the return key to activate a FL_RETURN_BUTTON
	object in a form with a single input object works
	again.

2009-05-08 Jens Thoms Toerring    <jt@toerring.de>

	* configure.ac: check for nanosleep too
	* lib/sysdep.c (fl_msleep): use HAVE_NONOSLEEP

2009-05-06 Jens Thoms Toerring    <jt@toerring.de>

	* lib/form.c: Changed return type of the functions
	fl_show_form(), fl_prepare_form_window() and
	fl_show_form_window() to 'Window' to reflect what
	was (mostly) said in the documentation. That also
	required including X11 header files already in
	lib/include/Basic.h instead of lib/include/XBasic.h.
	fl_prepare_form_window() now returns 'None' on
	failure instead of -1. Also the type of the 'window'
	member of the FL_FORM structure is now 'Window'
	instead of 'unsigned long' and that of 'icon_pixmap'
	and 'icon_mask' is 'Pixmap'.

	FL_TRIANGLE_* macros renamed to FLI_TRIANGLE_* and
	moved to lib/flinternal.h.

2009-05-06 Jens Thoms Toerring    <jt@toerring.de>

	* Just a bit of code cleanup in fdesign and
	minor changes of the documentation.

2009-05-04 Jens Thoms Toerring    <jt@toerring.de>

	* lib/signal.c: in handle_signal() a caught signal
	could lead to an infinite loop when the handling
	function did something that put it back into the
	main loop.

	* Some improvements of teh documentation

2009-05-03 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_attribs.c: Bug that kept composite
	objects from being selected after type change in
	fdesign removed. Length of labels is now unlimited.

2009-05-02 Jens Thoms Toerring    <jt@toerring.de>

	* Some missing figures added to documentation.

2009-04-16 Jens Thoms Toerring    <jt@toerring.de>

	Git repository added.

2009-03-27 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_main.c, fdesign/fd_printC.c: As Rob
	Carpenter noticed <glcanvas.h> doesn't get inclued