@@ -12,7 +12,7 @@ fdesign.1:
 	cp -p $(srcdir)/fdesign.man fdesign.1
 
 # forms.h is a generated file
-INCLUDES = -I../lib -I$(top_srcdir)/lib $(X_CFLAGS)
+INCLUDES = -I../lib -I../lib/include -I./xpm -I$(top_srcdir)/lib $(X_CFLAGS)
 
 bin_PROGRAMS = fdesign
 
