@@ -1,6 +1,5 @@
 /* Form definition file generated by fdesign. */
 
-#include "include/forms.h"
 #include <stdlib.h>
 #include "pallette.h"
 
@@ -37,15 +36,13 @@ create_form_pmain( void )
 
     return fdui;
 }
-
-
-#include "xpm/butt.xpm"
-#include "xpm/lightb.xpm"
-#include "xpm/roundb.xpm"
-#include "xpm/r3dbut.xpm"
-#include "xpm/check.xpm"
-#include "xpm/picture.xbm"
-#include "xpm/xconq.xpm"
+#include "butt.xpm"
+#include "lightb.xpm"
+#include "roundb.xpm"
+#include "r3dbut.xpm"
+#include "check.xpm"
+#include "picture.xbm"
+#include "xconq.xpm"
 
 
 /***************************************
@@ -71,27 +68,32 @@ create_form_buttform( void )
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 15, 15, 70, 40, "Button" );
     fl_set_button_shortcut( obj, "B#B", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_BUTTON );
     fl_set_pixmapbutton_data( obj, butt_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 101, 15, 70, 40, "LightButton" );
     fl_set_button_shortcut( obj, "L#L", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_LIGHTBUTTON );
     fl_set_pixmapbutton_data( obj, lightb_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 188, 15, 70, 40, "RoundButton" );
     fl_set_button_shortcut( obj, "R#R", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_ROUNDBUTTON );
     fl_set_pixmapbutton_data( obj, roundb_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 275, 15, 70, 40, "Round3DButton" );
     fl_set_button_shortcut( obj, "3#3", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_ROUND3DBUTTON );
     fl_set_pixmapbutton_align( obj, FL_ALIGN_TOP | FL_ALIGN_INSIDE, 3, 3 );
     fl_set_pixmapbutton_data( obj, r3dbut_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 58, 80, 70, 40, "CheckButton" );
     fl_set_button_shortcut( obj, "C#C", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_CHECKBUTTON );
     fl_set_pixmapbutton_data( obj, check_pixels );
 
@@ -102,7 +104,8 @@ create_form_buttform( void )
     fl_set_bitmapbutton_data( obj, picture_width, picture_height, ( unsigned char * ) picture_bits );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 231, 80, 70, 40, "PixmapButton" );
-    fl_set_button_shortcut( obj, "P#p", 1 );
+    fl_set_button_shortcut( obj, "P#P", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_PIXMAPBUTTON );
     fl_set_pixmapbutton_data( obj, xconq );
 
@@ -113,15 +116,13 @@ create_form_buttform( void )
 
     return fdui;
 }
-
-
-#include "xpm/box.xpm"
-#include "xpm/text.xpm"
-#include "xpm/frame.xpm"
-#include "xpm/chart.xpm"
-#include "xpm/clock.xpm"
-#include "xpm/picture1.xbm"
-#include "xpm/xconq1.xpm"
+#include "box.xpm"
+#include "text.xpm"
+#include "frame.xpm"
+#include "chart.xpm"
+#include "clock.xpm"
+#include "picture1.xbm"
+#include "xconq1.xpm"
 
 
 /***************************************
@@ -147,26 +148,31 @@ create_form_staticform( void )
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 30, 20, 65, 40, "Box" );
     fl_set_button_shortcut( obj, "B#B", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_BOX );
     fl_set_pixmapbutton_data( obj, box_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 110, 20, 65, 40, "Text" );
     fl_set_button_shortcut( obj, "T#T", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_TEXT );
     fl_set_pixmapbutton_data( obj, text_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 190, 20, 65, 40, "Frame" );
     fl_set_button_shortcut( obj, "F#F", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_LABELFRAME );
     fl_set_pixmapbutton_data( obj, frame_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 270, 20, 65, 40, "Chart" );
     fl_set_button_shortcut( obj, "C#C", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_CHART );
     fl_set_pixmapbutton_data( obj, chart_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 30, 80, 65, 40, "Clock" );
     fl_set_button_shortcut( obj, "o#O", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_CLOCK );
     fl_set_pixmapbutton_data( obj, clock_pixels );
 
@@ -178,6 +184,7 @@ create_form_staticform( void )
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 210, 80, 65, 40, "Pixmap" );
     fl_set_button_shortcut( obj, "P#P", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_PIXMAP );
     fl_set_pixmapbutton_data( obj, xconq1 );
 
@@ -188,15 +195,13 @@ create_form_staticform( void )
 
     return fdui;
 }
-
-
-#include "xpm/sld.xpm"
-#include "xpm/scb.xpm"
-#include "xpm/dial.xpm"
-#include "xpm/cnt.xpm"
-#include "xpm/pos.xpm"
-#include "xpm/vals.xpm"
-#include "xpm/twheel.xpm"
+#include "sld.xpm"
+#include "scb.xpm"
+#include "dial.xpm"
+#include "cnt.xpm"
+#include "pos.xpm"
+#include "vals.xpm"
+#include "twheel.xpm"
 
 
 /***************************************
@@ -222,36 +227,43 @@ create_form_valuatorform( void )
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 30, 16, 70, 40, "Slider" );
     fl_set_button_shortcut( obj, "S#S", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_SLIDER );
     fl_set_pixmapbutton_data( obj, sld_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 183, 16, 70, 40, "Scrollbar" );
-    fl_set_button_shortcut( obj, "b#b", 1 );
+    fl_set_button_shortcut( obj, "b#B", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_SCROLLBAR );
     fl_set_pixmapbutton_data( obj, scb_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 260, 16, 70, 40, "Dial" );
     fl_set_button_shortcut( obj, "D#D", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_DIAL );
     fl_set_pixmapbutton_data( obj, dial_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 30, 76, 70, 40, "Counter" );
     fl_set_button_shortcut( obj, "C#C", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_COUNTER );
     fl_set_pixmapbutton_data( obj, cnt_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 105, 76, 70, 40, "Positioner" );
     fl_set_button_shortcut( obj, "P#P", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_POSITIONER );
     fl_set_pixmapbutton_data( obj, pos_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 106, 16, 70, 40, "Valslider" );
     fl_set_button_shortcut( obj, "#V", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_VALSLIDER );
     fl_set_pixmapbutton_data( obj, vals_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 185, 76, 70, 40, "Thumbwheel" );
-    fl_set_button_shortcut( obj, "t#t", 1 );
+    fl_set_button_shortcut( obj, "t#T", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_THUMBWHEEL );
     fl_set_pixmapbutton_data( obj, twheel );
 
@@ -262,11 +274,9 @@ create_form_valuatorform( void )
 
     return fdui;
 }
-
-
-#include "xpm/menu.xpm"
-#include "xpm/choice.xpm"
-#include "xpm/br.xpm"
+#include "menu.xpm"
+#include "choice.xpm"
+#include "br.xpm"
 
 
 /***************************************
@@ -292,16 +302,19 @@ create_form_choiceform( void )
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 30, 20, 60, 60, "Menu" );
     fl_set_button_shortcut( obj, "M#M", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_MENU );
     fl_set_pixmapbutton_data( obj, menu_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 100, 20, 60, 60, "Choice" );
     fl_set_button_shortcut( obj, "C#C", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_CHOICE );
     fl_set_pixmapbutton_data( obj, choice_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 170, 20, 60, 60, "Browser" );
     fl_set_button_shortcut( obj, "B#B", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_BROWSER );
     fl_set_pixmapbutton_data( obj, br_pixels );
 
@@ -312,12 +325,10 @@ create_form_choiceform( void )
 
     return fdui;
 }
-
-
-#include "xpm/timer.xpm"
-#include "xpm/xyplot.xpm"
-#include "xpm/glcan.xpm"
-#include "xpm/tab.xpm"
+#include "timer.xpm"
+#include "xyplot.xpm"
+#include "glcan.xpm"
+#include "tab.xpm"
 
 
 /***************************************
@@ -343,25 +354,30 @@ create_form_miscform( void )
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 30, 16, 70, 45, "Timer" );
     fl_set_button_shortcut( obj, "T#T", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_TIMER );
     fl_set_pixmapbutton_data( obj, timer_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 103, 16, 70, 45, "XYPlot" );
     fl_set_button_shortcut( obj, "X#X", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_XYPLOT );
     fl_set_pixmapbutton_data( obj, xyplot_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 176, 16, 70, 45, "Canvas" );
     fl_set_button_shortcut( obj, "C#C", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_CANVAS );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 250, 16, 70, 45, "GLCanvas" );
     fl_set_button_shortcut( obj, "G#G", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_GLCANVAS );
     fl_set_pixmapbutton_data( obj, glcan_pixels );
 
     obj = fl_add_pixmapbutton( FL_RADIO_BUTTON, 30, 82, 70, 40, "Tabfolder" );
-    fl_set_button_shortcut( obj, "f#f", 1 );
+    fl_set_button_shortcut( obj, "f#F", 1 );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
     fl_set_object_callback( obj, pallette_entry_callback, FL_NTABFOLDER );
     fl_set_pixmapbutton_data( obj, tabfolder_pixels );
 
