@@ -1,7 +1,9 @@
-/** Header file generated by fdesign on Wed May  7 22:11:31 2008.**/
+/** Header file generated by fdesign on Wed May 13 18:56:06 2009.**/
 
 #ifndef FD_pmain_h_
 #define FD_pmain_h_
+
+#include <forms.h>
 
 /** Callbacks, globals and object handlers **/
 
