@@ -1,6 +1,5 @@
 /* Form definition file generated by fdesign. */
 
-#include "include/forms.h"
 #include <stdlib.h>
 #include "ui_attrib.h"
 
@@ -103,12 +102,12 @@ create_form_generic_attrib( void )
     fl_set_object_callback( obj, validate_cvar_name_cb, 0 );
 
     fdui->cbnameobj = obj = fl_add_input( FL_NORMAL_INPUT, 69, 151, 143, 25, "Callback" );
-    fl_set_input_shortcut( obj, "#k", 1 );
+    fl_set_input_shortcut( obj, "#K", 1 );
     fl_set_object_color( obj, FL_COL1, FL_TOP_BCOL );
     fl_set_object_callback( obj, validate_cvar_name_cb, 0 );
 
     fdui->argobj = obj = fl_add_input( FL_NORMAL_INPUT, 69, 181, 143, 25, "Argument" );
-    fl_set_input_shortcut( obj, "#u", 1 );
+    fl_set_input_shortcut( obj, "#U", 1 );
     fl_set_object_color( obj, FL_COL1, FL_TOP_BCOL );
 
     fdui->scobj = obj = fl_add_input( FL_NORMAL_INPUT, 69, 211, 143, 25, "Shortcut" );
@@ -132,7 +131,7 @@ create_form_generic_attrib( void )
     fl_set_object_callback( obj, auto_apply_cb, 0 );
 
     fdui->sizeobj = obj = fl_add_choice( FL_NORMAL_CHOICE, 278, 78, 131, 25, "Size" );
-    fl_set_object_shortcut( obj, "#z", 1 );
+    fl_set_object_shortcut( obj, "#Z", 1 );
     fl_set_object_boxtype( obj, FL_SHADOW_BOX );
     fl_set_object_callback( obj, auto_apply_cb, 0 );
 
