@@ -1,6 +1,5 @@
 /* Form definition file generated by fdesign. */
 
-#include "include/forms.h"
 #include <stdlib.h>
 #include "ui_objs.h"
 
@@ -25,20 +24,28 @@ create_form_buttonform( void )
     obj = fl_add_box( FL_FLAT_BOX, 0, 0, 581, 51, "" );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 20, 3, 30, 30, "button" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 60, 3, 30, 30, "round" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 100, 3, 30, 30, "round3d" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 140, 3, 30, 30, "check" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 180, 3, 30, 30, "light" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 220, 3, 30, 30, "bitmap" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 260, 3, 30, 30, "pixmap" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 300, 3, 30, 30, "scroll" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     fl_end_form( );
 
@@ -69,16 +76,22 @@ create_form_valuatorform( void )
     obj = fl_add_box( FL_FLAT_BOX, 0, 0, 581, 51, "" );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 20, 5, 30, 30, "slider" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 66, 5, 30, 30, "valslider" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 112, 5, 30, 30, "scrollbar" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 158, 5, 30, 30, "dial" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 204, 5, 30, 30, "counter" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 250, 5, 30, 30, "positioner" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     fl_end_form( );
 
@@ -109,20 +122,28 @@ create_form_staticform( void )
     obj = fl_add_box( FL_FLAT_BOX, 0, 0, 581, 51, "" );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 20, 3, 30, 30, "box" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 70, 3, 30, 30, "frame" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 120, 3, 30, 30, "labelframe" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 170, 3, 30, 30, "text" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 220, 3, 30, 30, "bitmap" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 270, 3, 30, 30, "pixmap" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 320, 3, 30, 30, "chart" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     obj = fl_add_pixmapbutton( FL_NORMAL_BUTTON, 370, 3, 30, 30, "clock" );
+    fl_set_object_color( obj, FL_COL1, FL_YELLOW );
 
     fl_end_form( );
 
