@@ -1,9 +1,9 @@
-/** Header file generated by fdesign on Sun May 10 13:06:42 2009.**/
+/** Header file generated by fdesign on Wed May 13 18:47:23 2009.**/
 
 #ifndef FD_control_h_
 #define FD_control_h_
 
-#include "include/forms.h"
+#include <forms.h>
 
 /** Callbacks, globals and object handlers **/
 
