@@ -29,7 +29,7 @@
  */
 
 #if defined F_ID || defined DEBUG
-char *fl_id_drw = "$Id: fldraw.c,v 1.18 2009/05/08 18:00:56 jtt Exp $";
+char *fl_id_drw = "$Id: fldraw.c,v 1.19 2009/05/13 11:59:08 jtt Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
