@@ -34,7 +34,7 @@
  */
 
 #if defined F_ID || defined DEBUG
-char *fl_id_inp = "$Id: input.c,v 1.26 2009/05/10 12:23:19 jtt Exp $";
+char *fl_id_inp = "$Id: input.c,v 1.27 2009/05/13 11:59:08 jtt Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
